# metis-crypto

./: .gitignore  pyproject.toml
metis_crypto/: common.py  jwa.py  jwe.py  jwk.py  jws.py  jwt.py
tests/: test_crypto.py  tests-cookbook.py
