[tool.poetry]
name = "metis-crypto"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0.5"
typing-extensions = "^4.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pdpp = "^0.4.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = [
    "*Test",
    "Test*",
    "Describe*",
]
python_functions = [
    "test_*",
    "it_*",
]
xfail_strict = true
log_cli = true
log_cli_level = 20
testpaths = [
    "tests",
    "integration",
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
